[package]
name = "async-tqsm"
version = "0.1.0"
edition = "2021"
description = "Asynchronous, streaming sentence segmenter based on tqsm"
license = "MIT"
repository = "https://github.com/WismutHansen/async-tqsm.git"
homepage = "https://github.com/WismutHansen/async-tqsm"

[dependencies]
libtqsm = { git = "https://github.com/WismutHansen/tqsm", branch = "main", package = "libtqsm" }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.11.1"
unicode-segmentation = "1.12.0"

# For library usage
[lib]
name = "async_tqsm"
crate-type = ["rlib"]

# For CLI usage
[[bin]]
name = "async-tqsm"
path = "src/bin/async-tqsm.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
